# cpp_vscode_boilerplate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
apps/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt
project/include/: test.h
project/src/: test.cpp
